[package]
name = "jwks-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix-Web: Web framework for handling HTTP requests
actix-web = "4"

# JWT-related dependencies
jsonwebtoken = "9"

# Random number generation for RSA key generation
rand = "0.8"

# RSA key pair generation
rsa = "0.9"

# Base64 encoding for converting RSA keys to JWKS format
base64 = "0.21"

# JSON serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time management (used for key expiration timestamps)
chrono = "0.4"

# Unique key ID (kid) generation
uuid = { version = "1", features = ["v4"] }

# Async runtime for handling async operations
tokio = { version = "1", features = ["full"] }
